# fire-control-api

./: Makefile  README.md  prek.toml  pyproject.toml
deploy/compose/: base.yml  dev.yml  test.yml
deploy/containers/fastapi/: Dockerfile
deploy/containers/minio/: Dockerfile
deploy/containers/nginx/: Dockerfile
deploy/containers/nginx/conf/: app.conf  nginx.conf
deploy/containers/postgres/: Dockerfile  init-test.sql  init.sql
deploy/containers/redis/: Dockerfile
deploy/variables/: dev  test
docs/: architecture.md  requirements.md  routes.md  schema.md  tasks.md  tools.yml  usecases.md
source/api/: app.py  description.md  docs.py
source/api/clients/: minio.py  postgres.py  redis.py
source/api/core/cache/: service.py
source/api/core/database/cruds/: __init__.py  default.py  media.py  media_report.py  occurrence.py  report.py  report_media.py  user.py
source/api/core/database/enums/: incident.py  media.py  roles.py
source/api/core/database/models/: __init__.py  default.py  incident.py  media.py  media_report.py  occurrence.py  report.py  report_media.py  user.py  weather.py
source/api/core/database/schemas/: __init__.py  auth.py  coordinates.py  default.py  media.py  media_report.py  occurrence.py  report.py  report_media.py  user.py
source/api/core/database/services/: location.py  ocurrence.py
source/api/core/security/: service.py
source/api/core/storage/: service.py
source/api/docs/: description.md  tags.json
source/api/routes/: __init__.py  auth.py  firefighter.py  health.py  home.py  media.py  occurrence.py  report.py  user.py
source/database/registry/: mg_cities.py  north_mg_cities.py  test_mg_cities.py  users.py
source/database/seeders/: seed_ibge.py  seed_users.py
source/tests/: conftest.py  coverage.md  test_auth.py  test_health.py  test_media.py  test_occurrence.py  test_report.py  test_user.py
source/tests/fixtures/: clients.py  data.py  database.py  db_admin.py  db_media.py  db_occurrence.py  db_report.py  db_user.py  gc.py
