[project]
name = "fire-control-api"
version = "0.1.0"
description = "fire-control-api is a Python package that provides an API for controlling fire-related reports and operations. It allows users to manage fire reports, retrieve information about fire incidents, and perform various actions related to fire control."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "prek>=0.3.6",
    "ruff>=0.15.6",
]
